--- a/proyecto sistema sabanas/servicios/navbar/navbar.html
+++ b/proyecto sistema sabanas/servicios/navbar/navbar.html
@@ -1,51 +1,48 @@
 <nav class="navbar">
   <ul>
-    <li>
-      <a style="color:aqua;"
-        href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/mantenimiento_seguridad/dashboard/dashboardv1.php">
+    <li class="mod-dashboard">
+      <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/mantenimiento_seguridad/dashboard/dashboardv1.php">
         Dashboard
       </a>
     </li>
 
-    <li class="dropdown">
+    <li class="dropdown mod-agenda">
       <a href="#" class="dropbtn">Agenda</a>
       <div class="dropdown-content">
         <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/servicios/orden_reserva/ui_reserva.php">
           Reservas
         </a>
         <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/servicios/orden_reserva/agenda_reservas.php">
-          Gestion Reserva
+          Gestión de reservas
         </a>
         <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/servicios/ot/ui_ot.php">
-          Órdenes de Trabajo
+          Órdenes de trabajo
         </a>
       </div>
     </li>
 
-    <li>
-      <a
-        href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/servicios/solicitud_cliente/ui_solicitud_cliente.php">
+    <li class="mod-solicitudes">
+      <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/servicios/solicitud_cliente/ui_solicitud_cliente.php">
         Solicitudes
       </a>
     </li>
 
-    <li>
+    <li class="mod-presupuestos">
       <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/servicios/presupuesto/ui_presupuesto.php">
         Presupuestos
       </a>
     </li>
 
-    <li>
+    <li class="mod-reclamos">
       <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/servicios/reclamo/ui_reclamo.php">
         Reclamos
       </a>
     </li>
 
-    <li class="dropdown">
+    <li class="dropdown mod-referenciales">
       <a href="#" class="dropbtn">Referenciales</a>
       <div class="dropdown-content">
-        <a
-          href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/servicios/profesional/ui_profesional.php">
+        <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/servicios/profesional/ui_profesional.php">
           Profesionales
         </a>
         <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/servicios/producto/ui_producto_manager.php">
@@ -57,6 +54,20 @@
       </div>
     </li>
 
+    <li class="dropdown mod-informes">
+      <a href="#" class="dropbtn">Informes</a>
+      <div class="dropdown-content">
+        <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/servicios/informes/diario_reservas.php">
+          Diario de reservas
+        </a>
+        <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/servicios/informes/ranking_servicios.php">
+          Ranking servicios & profesionales
+        </a>
+        <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/servicios/informes/clientes_inactivos.php">
+          Clientes sin retorno
+        </a>
+      </div>
+    </li>
 
     <li>
       <a class="a_contenedor"
