--- a/proyecto sistema sabanas/menu/navbar.html
+++ b/proyecto sistema sabanas/menu/navbar.html
@@ -66,6 +66,20 @@
                 <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/menu/referenciales_compra/sucursales/ui_sucursales.php">Sucursales v3</a>
             </div>
         </li>
+        <li class="dropdown">
+            <a href="#" class="dropbtn">Informes</a>
+            <div class="dropdown-content">
+                <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/menu/informes-compra/reporte_compras.php">
+                    Reporte general de compras
+                </a>
+                <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/menu/informes-compra/por-items/ui_compras_por_item.php">
+                    Compras por ítem
+                </a>
+                <a href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/menu/informes-compra/cumplimiento-oc/ui_cumplimiento_oc.php">
+                    Cumplimiento de OCs
+                </a>
+            </div>
+        </li>
         <li>
             <a class="a_contenedor"
                 href="/TALLER DE ANALISIS Y PROGRAMACIÓN I/proyecto sistema sabanas/mantenimiento_seguridad/panel_usuario/ui_panel_usuario.php"
